[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChargemolBondsReader"
version = "2023.1"
description = "OVITO Python file reader for the DDEC analysis output written by chargemol."
keywords = ["ovito", "python-file-reader"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1"
]

[project.urls]
repository = "https://github.com/ovito-org/ChargemolBondsReader"

[project.entry-points.'OVITO.FileReader']
"Chargemol Bonds Reader" = "ChargemolBondsReader:ChargemolBondsReader"

[tool.setuptools.packages.find]
where = ["src"]
